kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jagoda/nest-backend:alpine
          imagePullPolicy: Never
          command: [ "npm" ]
          args: [ "run", "start:dev" ]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: backend-volume
              mountPath: /app
      volumes:
        - name: backend-volume
          persistentVolumeClaim:
            claimName: backend-pvc
