kubernetes/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-db
  template:
    metadata:
      labels:
        app: events-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: events-db-pvc
