kubernetes/keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-db-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: keycloak-db-volume
          persistentVolumeClaim:
            claimName: keycloak-db-pvc
