kubernetes/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          command:
            - "/opt/keycloak/bin/kc.sh"
          args:
            - "start-dev"
          ports:
            - containerPort: 8080
