kubernetes/feedback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback
spec:
  replicas: 3
  selector:
    matchLabels:
      app: feedback
  template:
    metadata:
      labels:
        app: feedback
    spec:
      containers:
        - name: feedback
          image: feedback:dev
          imagePullPolicy: Never
          command: [ "npm" ]
          args: [ "run", "start:dev" ]
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: events-db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: feedback
spec:
  selector:
    app: feedback
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
